--- a/CarWechat/templates/car/cart.html
+++ b/CarWechat/templates/car/cart.html
@@ -104,8 +104,8 @@
 
                             }
                         });
-                        setTimeout(1000);
-                        window.location.href = window.location.protocol + "//" + window.location.host + '/wx/order/' + data["orderId"]
+{#                        setTimeout(1000);#}
+{#                        window.location.href = window.location.protocol + "//" + window.location.host + '/wx/order/' + data["orderId"]#}
 
                     }
                     else {
