--- a/CarAdmin/templates/admin/order.html
+++ b/CarAdmin/templates/admin/order.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'admin/model/edit.html' %}
+
+{% block body %}
+    <h1>通力订单管理</h1>
+    {{ super() }}
+{% endblock %}
+{% block tail %}
+    {{ super() }}
+    {{ lib.form_js() }}
+    <script>
+            function refund(confirm) {
+            $.ajax({
+                url: window.location.protocol + "//" + window.location.host + '/api/refund/{{ admin_view.id }}?isconfirm='+confirm,
+                type: 'get',
+                contentType: false,
+                processData: false,
+                success: function (data) {
+                    if (data['status'] === 'ok') {
+                        alert("已处理")
+                    }
+                    else {
+                        alert("处理失败，请重试")
+                    }
+                    location.reload()
+
+                }
+
+            })
+        }
+        $(document).ready(function () {
+            if ($("#confirm_refund")) {
+                $("#confirm_refund").click(function () {
+                    refund("True")
+                })
+            }
+            if ($("#refuse_refund")) {
+                $("#refuse_refund").click(function () {
+refund("False")
+                })
+            }
+        })
+    </script>
+{% endblock %}
