--- a/CarWechat/templates/car/orderDetail.html
+++ b/CarWechat/templates/car/orderDetail.html
@@ -59,7 +59,7 @@
                         </tr>
                         <tr>
                             <td>总价</td>
-                            <td id="sum">{{ data.totalfee/100 }}</td>
+                            <td id="sum">{{ data.totalfee/100 }}元</td>
                         </tr>
                         </tbody>
                     </table>
