--- a/CarWechat/templates/car/selectCar.html
+++ b/CarWechat/templates/car/selectCar.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="card-content">
                             <span class="card-title">{{ d.name }}</span>
-                            <p>价格：{{ d.price }}/天</p>
+                            <p>价格：{{ d.price/100 }}/天</p>
                         </div>
                     </div>
                 </div>
