--- a/CarWechat/templates/car/repay.html
+++ b/CarWechat/templates/car/repay.html
@@ -60,8 +60,8 @@
                             <td>{{ data.count }}</td>
                         </tr>
                         <tr>
-                            <td>总价</td>
-                            <td id="sum">{{ data.totalfee/100 }}元</td>
+                            <td>总价/元</td>
+                            <td id="sum">{{ data.totalfee/100 }}</td>
                         </tr>
                         </tbody>
                     </table>
