--- a/CarAdmin/templates/admin/order.html
+++ b/CarAdmin/templates/admin/order.html
@@ -14,6 +14,7 @@
                 type: 'get',
                 contentType: false,
                 processData: false,
+                async:false,
                 success: function (data) {
                     if (data['status'] === 'ok') {
                         alert("已处理")
@@ -36,6 +37,7 @@
                 type: 'get',
                 contentType: false,
                 processData: false,
+                async:false,
                 success: function (data) {
                 }
 
