--- a/CarAdmin/templates/car/index.html
+++ b/CarAdmin/templates/car/index.html
@@ -1,202 +1,171 @@
 {% extends "base.html" %}
 {% block css %}
 
-<style type="text/css">
-    html {
-        height: 100%
-    }
+    <style type="text/css">
+        html {
+            height: 100%
+        }
 
-    body {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-    }
+        body {
+            height: 100%;
+            margin: 0px;
+            padding: 0px
+        }
 
-    .container {
-        height: 90%
-    }
+        .container {
+            height: 90%
+        }
 
-    #map-container {
-        height: 90%
-    }
+        #map-container {
+            height: 90%
+        }
 
 
-</style>
+    </style>
 {% endblock %}
 {% block content %}
 
 
-<div id="map-container">
-
-</div>
-
-
-<!-- Modal Structure -->
-<div id="modal2" class="modal bottom-sheet">
-    <div class="modal-content">
-        <div class="row">
-            <div class="col s8">
-                <h6 id="modal-failed-title">
-
-                </h6>
-            </div>
-        </div>
-
-
-        <!--<p id="modal-failed-refreshTime">更新时间：</p>-->
-        <!--<p id="modal-failed-currentLoc">当前位置：</p>-->
+    <div id="map-container">
 
     </div>
-    <div class="modal-footer">
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
-    </div>
-</div>
-<!-- Modal Structure -->
-<div id="modal1" class="modal bottom-sheet">
-    <div class="modal-content">
-        <div class="row">
-            <div class="col s8">
-                <h4 id="modal-title">
 
-                </h4>
-            </div>
-        </div>
-
-
-        <!--<p id="modal-refreshTime">更新时间：</p>-->
-        <!--<p id="modal-currentLoc">当前位置：</p>-->
-        <div class="row">
-            <div class="col s6">
-                <a href="#" id="modal-carRec">回放</a>
-            </div>
-            <!--<div class="col s4">-->
-            <!--<a href="#">-->
-            <!--回放-->
-            <!--</a>-->
-            <!--</div>-->
-            <div class="col s6">
-                <a id="modal-carDetail" href="#">
-                    详细信息
-                </a>
-            </div>
-
-        </div>
-    </div>
-    <div class="modal-footer">
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
-    </div>
-</div>
 
 {% endblock %}
 {% block script %}
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=67CKhYZ0N7g1M0BLOHnOqsu6idBxN2vT"></script>
-<script>
-    $(document).ready(function () {
-        // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+    <script type="text/javascript"
+            src="http://api.map.baidu.com/api?v=3.0&ak=67CKhYZ0N7g1M0BLOHnOqsu6idBxN2vT"></script>
+    <script>
+        $(document).ready(function () {
+            // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
 
-        var map = new BMap.Map("map-container");
+            var map = new BMap.Map("map-container");
+            var myGeo = new BMap.Geocoder();
 
-        function timestampToTime(timestamp) {
-            var date = new Date(timestamp * 1000);//时间戳为10位需*1000，时间戳为13位的话不需乘1000
-            Y = date.getFullYear() + '-';
-            M = (date.getMonth() + 1 < 10 ? '0' + (date.getMonth() + 1) : date.getMonth() + 1) + '-';
-            D = date.getDate() + ' ';
-            h = date.getHours() + ':';
-            m = date.getMinutes() + ':';
-            s = date.getSeconds();
-            return Y + M + D + h + m + s;
-        }
 
-        function addMarker(point, index, data) {  // 创建图标对象
-            var myIconColor = new BMap.Icon("http://p5w48dhwa.bkt.clouddn.com/carRed.png", new BMap.Size(60, 60), {
-                // 指定定位位置。
-                // 当标注显示在地图上时，其所指向的地理位置距离图标左上
-                // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
-                // 图标中央下端的尖角位置。
-                // 设置图片偏移。
-                // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
-                // 需要指定大图的偏移位置，此做法与css sprites技术类似。
-                imageOffset: new BMap.Size(0, 0)   // 设置图片偏移
-            });
-            var myIconGrey = new BMap.Icon("http://p5w48dhwa.bkt.clouddn.com/carGrey.png", new BMap.Size(60, 60), {
-                // 指定定位位置。
-                // 当标注显示在地图上时，其所指向的地理位置距离图标左上
-                // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
-                // 图标中央下端的尖角位置。
-                // 设置图片偏移。
-                // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
-                // 需要指定大图的偏移位置，此做法与css sprites技术类似。
-                imageOffset: new BMap.Size(0, 0)   // 设置图片偏移
-            });
-            // 创建标注对象并添加到地图
-            if (data["car"]["id"] !== "") {
-                var marker = new BMap.Marker(point, {icon: myIconColor, rotation: data['course']});
-
+            function timestampToTime(timestamp) {
+                var date = new Date(timestamp * 1000);//时间戳为10位需*1000，时间戳为13位的话不需乘1000
+                Y = date.getFullYear() + '-';
+                M = (date.getMonth() + 1 < 10 ? '0' + (date.getMonth() + 1) : date.getMonth() + 1) + '-';
+                D = date.getDate() + ' ';
+                h = date.getHours() + ':';
+                m = date.getMinutes() + ':';
+                s = date.getSeconds();
+                return Y + M + D + h + m + s;
             }
-            else {
-                var marker = new BMap.Marker(point, {icon: myIconGrey, rotation: data['course']});
-            }
-//{#            var marker = new BMap.Marker(point);#}
-            marker.addEventListener("click", function () {
-                if (data['car']["id"] !== "") {
-                    $('#modal-title').text(data['car']['name']);
-//                    $('#modal-carImg').attr('src', "{{imgDomain}}" + data['car']['img']);
-//                    $('#modal-refreshTime').text('更新时间：' + timestampToTime(data['gps_time']));
-//                    $('#modal-currentLoc').text('当前位置：' + data['address']);
-                    $('#modal-carDetail').attr('href', 'car' + '/' + data['car']['id']);
-                    $('#modal-carRec').attr('href', 'carRec' + '/' + data['car']['id']);
-                    $('#modal1').modal('open');
+
+            function addMarker(point, index, data) {  // 创建图标对象
+                var myIconColor = new BMap.Icon("http://p5w48dhwa.bkt.clouddn.com/carRed.png", new BMap.Size(60, 60), {
+                    // 指定定位位置。
+                    // 当标注显示在地图上时，其所指向的地理位置距离图标左上
+                    // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
+                    // 图标中央下端的尖角位置。
+                    // 设置图片偏移。
+                    // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
+                    // 需要指定大图的偏移位置，此做法与css sprites技术类似。
+                    imageOffset: new BMap.Size(0, 0)   // 设置图片偏移
+                });
+                var myIconGrey = new BMap.Icon("http://p5w48dhwa.bkt.clouddn.com/carGrey.png", new BMap.Size(60, 60), {
+                    // 指定定位位置。
+                    // 当标注显示在地图上时，其所指向的地理位置距离图标左上
+                    // 角各偏移10像素和25像素。您可以看到在本例中该位置即是
+                    // 图标中央下端的尖角位置。
+                    // 设置图片偏移。
+                    // 当您需要从一幅较大的图片中截取某部分作为标注图标时，您
+                    // 需要指定大图的偏移位置，此做法与css sprites技术类似。
+                    imageOffset: new BMap.Size(0, 0)   // 设置图片偏移
+                });
+                // 创建标注对象并添加到地图
+                if (data["car"]["id"] !== "") {
+                    var marker = new BMap.Marker(point, {icon: myIconColor, rotation: data['course']});
+
                 }
                 else {
-                    $('#modal-failed-title').text('此设备暂未绑定车辆,请联系管理员或登陆后台修改');
-//                    $('#modal-failed-refreshTime').text('更新时间：' + timestampToTime(data['gps_time']));
-//                    $('#modal-failed-currentLoc').text('当前位置：' + data['address']);
-                    $('#modal2').modal('open');
+                    var marker = new BMap.Marker(point, {icon: myIconGrey, rotation: data['course']});
                 }
+//{#            var marker = new BMap.Marker(point);#}
+                marker.addEventListener("click", function () {
 
+                    var address = "";
+                    if (data['car']["id"] !== "") {
+                        var opts = {
+                            width: 200,     // 信息窗口宽度
+                            height: 200,     // 信息窗口高度
+                            title: data['car']['name'], // 信息窗口标题
+                            enableMessage: true,//设置允许信息窗发送短息
+                        };
 
-            });
-            map.addOverlay(marker);
-        }
-
-        map.addControl(new BMap.NavigationControl());
-        map.addControl(new BMap.ScaleControl());
-        map.addControl(new BMap.OverviewMapControl());
-        map.addControl(new BMap.MapTypeControl());
-        var data = [];
-
-        function getPoint() {
-            map.clearOverlays();
-            $.ajax({
-                url: 'api/carmonitor',
-                type: 'get',
-//        data: formData,
-                contentType: false,
-                processData: false,
-                success: function (result) {
-                    if (result['status'] == "ok") {
-                        data = result['data'];
-                        for (var i = 0; i < data.length; i++) {
-                            if (data[i]['device_info'] === 0) {
-                                var lng = data[i]['lng'];
-                                var lat = data[i]['lat'];
-                                var point = new BMap.Point(lng, lat);
-                                addMarker(point, i, data[i]);
+// 根据坐标得到地址描述
+                        myGeo.getLocation(point, function (result) {
+                            if (result) {
+                                address = result.address;
                             }
-                        }
-                        map.centerAndZoom(point, 15);
+                            var infoWindow = new BMap.InfoWindow("<p>目前位置：" + address + "</p><a href='" + 'car' + '/' + data['car']['id'] + "'>详细信息</a><br>" +
+                                "<a href='" + 'carRec' + '/' + data['car']['id'] + "'>轨迹回放</a><br>", opts);
+                            map.openInfoWindow(infoWindow, point);
+                        });
+
 
                     }
                     else {
-                        alert('服务器出错，请稍后')
+                        $('#modal-failed-title').text('此设备暂未绑定车辆,请联系管理员或登陆后台修改');
+                        var opts = {
+                            width: 200,     // 信息窗口宽度
+                            height: 200,     // 信息窗口高度
+                            enableMessage: true//设置允许信息窗发送短息
+                        };
+                        myGeo.getLocation(point, function (result) {
+                            if (result) {
+                                address = result.address;
+                            }
+                            var infoWindow = new BMap.InfoWindow("<p>目前位置：" + address + "</p>此设备暂未绑定车辆,请联系管理员或登陆后台修改", opts);
+                            map.openInfoWindow(infoWindow, point);
+                        });
                     }
-                }
 
-            })
-        }
 
-        getPoint()
+                });
+                map.addOverlay(marker);
+            }
+
+            map.addControl(new BMap.NavigationControl());
+            map.addControl(new BMap.ScaleControl());
+            map.addControl(new BMap.OverviewMapControl());
+            map.addControl(new BMap.MapTypeControl());
+            var data = [];
+
+            function getPoint() {
+                map.clearOverlays();
+                $.ajax({
+                    url: 'api/carmonitor',
+                    type: 'get',
+//        data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function (result) {
+                        if (result['status'] == "ok") {
+                            data = result['data'];
+                            for (var i = 0; i < data.length; i++) {
+                                if (data[i]['device_info'] === 0) {
+                                    var lng = data[i]['lng'];
+                                    var lat = data[i]['lat'];
+                                    var point = new BMap.Point(lng, lat);
+                                    addMarker(point, i, data[i]);
+                                }
+                            }
+                            map.centerAndZoom(point, 15);
+
+                        }
+                        else {
+                            alert('服务器出错，请稍后')
+                        }
+                    }
+
+                })
+            }
+
+            getPoint()
 //        setInterval(getPoint,5000)
-    });
-</script>
+        });
+    </script>
 {% endblock %}
