--- a/CarWechat/templates/car/sign.html
+++ b/CarWechat/templates/car/sign.html
@@ -1,180 +1,177 @@
 {% extends "base.html" %}
 {% block css %}
-<style type="text/css">
-    .container {
-        padding: 20px;
-    }
-</style>
+    <style type="text/css">
+        .container {
+            padding: 20px;
+        }
+    </style>
 {% endblock %}
 {% block content %}
-<div class="container z-depth-3 col s10  m8 l6 offset-s1 offset-l3 offset-m2">
-    <div class="row">请完善个人信息</div>
-    <div class="row">
-        <div class="col s12">
-            <div class="row">
-                <div class="input-field ">
-                    <input placeholder="请输入您的真实姓名" id="name" type="text" class="validate">
-                    <label for="name">姓名</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field ">
-                    <div class="row">
-                        <div class="col s2">
-                            <label for="driveage">驾龄</label>
-                        </div>
-
-                        <div class="range-field col s10">
-                            <input type="range" min="0" max="100" id="driveage"/>
-
-                        </div>
+    <div class="container z-depth-3 col s10  m8 l6 offset-s1 offset-l3 offset-m2">
+        <div class="row">请完善个人信息</div>
+        <div class="row">
+            <div class="col s12">
+                <div class="row">
+                    <div class="input-field ">
+                        <input placeholder="请输入您的真实姓名" id="name" type="text" class="validate">
+                        <label for="name">姓名</label>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="input-field ">
+                        <div class="row">
+                            <div class="col s2">
+                                <label for="driveage">驾龄</label>
+                            </div>
+
+                            <div class="range-field col s10">
+                                <input type="range" min="0" max="100" id="driveage"/>
+
+                            </div>
+                        </div>
 
 
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field ">
-                    <input id="password" type="password" class="validate" placeholder="不小于六位的密码">
-                    <label for="password">密码</label>
+                <div class="row">
+                    <div class="input-field ">
+                        <input id="password" type="password" class="validate" placeholder="不小于六位的密码">
+                        <label for="password">密码</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field ">
-                    <input id="confirm-password" type="password" class="validate" placeholder="不小于六位的密码">
-                    <label for="confirm-password">确认密码</label>
+                <div class="row">
+                    <div class="input-field ">
+                        <input id="confirm-password" type="password" class="validate" placeholder="不小于六位的密码">
+                        <label for="confirm-password">确认密码</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field ">
-                    <input id="idCode" type="text" class="validate" placeholder="输入您的身份证号">
-                    <label for="idCode">身份证号</label>
+                <div class="row">
+                    <div class="input-field ">
+                        <input id="idCode" type="text" class="validate" placeholder="输入您的身份证号">
+                        <label for="idCode">身份证号</label>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s9 m9 l10">
-                    <input id="phone" type="tel" class="validate">
-                    <label data-error="输入错误" for="phone">联系人电话</label>
+                <div class="row">
+                    <div class="input-field col s9 m9 l10">
+                        <input id="phone" type="tel" class="validate">
+                        <label data-error="输入错误" for="phone">联系人电话</label>
+
+                    </div>
+                    <div class="col s3 m3 l2">
+                        <a class="btn-floating btn-middle red" style="text-align: center" id="getvCode">
+                            验证</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field">
+                        <input id="vCode" type="number" class="validate">
+                        <label data-error="输入错误" for="vCode" id="vCodeLable1">短信验证码</label>
+                    </div>
+                </div>
+                <div class="row" align="center">
+
+                    <button class="btn waves-effect waves-light lighten-2" id="newProfile">
+                        <i class="material-icons right">send</i>注册
+                    </button>
 
                 </div>
-                <div class="col s3 m3 l2">
-                    <a class="btn-floating btn-middle red" style="text-align: center" id="getvCode">
-                        验证</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field">
-                    <input id="vCode" type="number" class="validate">
-                    <label data-error="输入错误" for="vCode" id="vCodeLable1">短信验证码</label>
-                </div>
-            </div>
-            <div class="row" align="center">
-
-                <button class="btn waves-effect waves-light lighten-2" id="newProfile">
-                    <i class="material-icons right">send</i>注册
-                </button>
-
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
 {% block script %}
-<script>
-    var IdCode = {
+    <script>
+        var IdCode = {
 
-        getIdCode: function (phone) {
-            $.ajax({
-                type: 'POST',
-                url: "api/idcode",
-                dataType: 'json',
-                data: {phone: phone},
-                success: function (result) {
-                    $(IdCode.targetButton).attr('disabled', 'true');
-                    IdCode.time = 200;
-                    IdCode.timer = setInterval(IdCode.refreshTime, 1000)
+            getIdCode: function (phone) {
+                $.ajax({
+                    type: 'POST',
+                    url: "api/idcode",
+                    dataType: 'json',
+                    data: {phone: phone},
+                    success: function (result) {
+                        $(IdCode.targetButton).attr('disabled', 'true');
+                        IdCode.time = 200;
+                        IdCode.timer = setInterval(IdCode.refreshTime, 1000)
+                    }
+                })
+
+            },
+            refreshTime: function () {
+                IdCode.time -= 1;
+                console.log(IdCode.time);
+                $(IdCode.targetLable).text(IdCode.time + "秒后可重新获取");
+                if (IdCode.time == 0) {
+                    clearInterval(IdCode.timer);
+                    $(IdCode.targetButton).removeAttr('disabled');
+                    $(IdCode.targetLable).text("输入验证码");
                 }
-            })
-
-        },
-        refreshTime: function () {
-            IdCode.time -= 1;
-            console.log(IdCode.time);
-            $(IdCode.targetLable).text(IdCode.time + "秒后可重新获取");
-            if (IdCode.time == 0) {
-                clearInterval(IdCode.timer);
-                $(IdCode.targetButton).removeAttr('disabled');
-                $(IdCode.targetLable).text("输入验证码");
             }
-        }
-    };
-    $(document).ready(function () {
-        $('#getvCode').click(function () {
-            re = /^1\d{10}$/;
-            if (re.test($('#phone').val())) {
-                var idCodeObj1 = IdCode;
-                idCodeObj1.targetLable = '#vCodeLable1';
-                idCodeObj1.targetButton = '#getvCode';
-                idCodeObj1.getIdCode($('#phone').val());
-            }
-            else {
-                $('#phone').addClass('invalid')
-            }
-
-        });
-        $('#newProfile').click(function () {
-            if (!$('#vCode').val()) {
-                $('#vCode').addClass('invalid')
-            }
-            else {
-                if ($('#password').val() != $('#confirm-password').val()) {
-                    alert("密码输入不一致")
-                    $('#password').addClass('invalid')
-                    $('#confirm-password').addClass('invalid')
+        };
+        $(document).ready(function () {
+            $('#getvCode').click(function () {
+                re = /^1\d{10}$/;
+                if (re.test($('#phone').val())) {
+                    var idCodeObj1 = IdCode;
+                    idCodeObj1.targetLable = '#vCodeLable1';
+                    idCodeObj1.targetButton = '#getvCode';
+                    idCodeObj1.getIdCode($('#phone').val());
                 }
                 else {
-                    var formData = new FormData();
-                    formData.append('name', $('#name').removeClass('invalid').val());
-                    formData.append('driveage', $('#driveage').removeClass('invalid').val());
-                    formData.append('password', $('#password').removeClass('invalid').val());
-                    formData.append('idCode', $('#idCode').removeClass('invalid').val());
-                    formData.append('vCode', $('#vCode').removeClass('invalid').val());
-                    formData.append('phone', $('#phone').removeClass('invalid').val());
-                    $.ajax({
-                        url: 'api/sign',
-                        type: 'POST',
-                        data: formData,
-                        contentType: false,
-                        processData: false,
-                        success: function (result) {
-                            if (result['status'] == 'lacked') {
-                                alert("信息填写有误");
-                                result['msg'].forEach(function (v, k) {
-                                    $('#' + v).removeClass('valid').addClass('invalid')
-                                })
-                            }
-                            if (result['status'] == 'wrongcode') {
-                                $('#vCode').removeClass('valid').addClass('invalid')
-                            }
-                            if (result['status'] == 'ok') {
-                                alert('信息录入成功');
-                                window.location = "{{url_for('web.selectCar')}}"
-                            }
-                            if (result['status'] == 'dup') {
-                                alert('当前手机号码/身份证号已存在')
-                            }
-                            if (result['status'] == 'nochange') {
-                                alert('您已经注册过，不能修改信息，如有疑问请联系客服人工修改')
-                            }
-                        }
-
-                    })
+                    $('#phone').addClass('invalid')
                 }
 
+            });
+            $('#newProfile').click(function () {
+                if (!$('#vCode').val()) {
+                    $('#vCode').addClass('invalid')
+                }
+                else {
+                    if ($('#password').val() != $('#confirm-password').val()) {
+                        alert("密码输入不一致")
+                        $('#password').addClass('invalid')
+                        $('#confirm-password').addClass('invalid')
+                    }
+                    else {
+                        var formData = new FormData();
+                        formData.append('name', $('#name').removeClass('invalid').val());
+                        formData.append('driveage', $('#driveage').removeClass('invalid').val());
+                        formData.append('password', $('#password').removeClass('invalid').val());
+                        formData.append('idCode', $('#idCode').removeClass('invalid').val());
+                        formData.append('vCode', $('#vCode').removeClass('invalid').val());
+                        formData.append('phone', $('#phone').removeClass('invalid').val());
+                        $.ajax({
+                            url: 'api/sign',
+                            type: 'POST',
+                            data: formData,
+                            contentType: false,
+                            processData: false,
+                            success: function (result) {
+                                if (result['status'] == 'lacked') {
+                                    alert("信息填写有误");
+                                    result['msg'].forEach(function (v, k) {
+                                        $('#' + v).removeClass('valid').addClass('invalid')
+                                    })
+                                }
 
-            }
-        });
-    })
-</script>
+                                if (result['status'] == 'ok') {
+                                    alert('信息录入成功');
+                                    window.location = "{{url_for('web.selectCar')}}"
+                                }
+
+                                if (result['status'] == 'alert') {
+                                    alert(result['msg']);
+
+                                }
+                            }
+
+                        })
+                    }
+
+
+                }
+            });
+        })
+    </script>
 {% endblock %}
