--- a/CarWechat/templates/car/cart.html
+++ b/CarWechat/templates/car/cart.html
@@ -44,7 +44,7 @@
                         </tr>
                         <tr>
                             <td>每日租金/元</td>
-                            <td id="price">{{ carData.price }}</td>
+                            <td id="price">{{ carData.price/100 }}</td>
                         </tr>
                         <tr>
                             <td>天数</td>
