--- a/CarWechat/templates/car/cart.html
+++ b/CarWechat/templates/car/cart.html
@@ -130,7 +130,7 @@
                 }
             );
             $("#count").val(1);
-            $("#sum").html($("#count").val() * $("#price").text() / 100);
+            $("#sum").html($("#count").val() * $("#price").text() );
             $("#pay").click(function () {
                 getOrder();
             })
